--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{ product }}</h1>
+      <h1>{{ product.title }}</h1>
+      <p>{{ product.description }}</p>
     </div>
 
     <!-- Import Js -->
