--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <div id="app">
       <h1>{{ product }}</h1>
     </div>
-
+    <!-- Import App -->
+    <script src="./main.js"></script>
     <!-- Mount App -->
     <script>
-      const mountedApp = app.mount('#app')
+      const mountedApp = app.mount("#app");
     </script>
   </body>
 </html>
