--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
 
     <!-- Import App -->
     <script src="./main.js"></script>
+    <script src="./components/ProductDisplay.js"></script>
 
     <!-- Mount App -->
     <script>
       const mountedApp = app.mount('#app')
     </script>
+
+
   </body>
 </html>
