--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <div id="app">
     <div class="nav-bar"></div>
 
+    <div class="cart">Cart ({{ cart }})</div>
+
     <div class="product-display">
       <div class="product-container">
         <div class="product-image">
@@ -21,12 +23,22 @@
         </div>
         <div class="product-info">
           <h1>{{ product }}</h1>
-          <p>{{description}}</p>
+
+          <ul>
+            <li v-for="detail in details">{{detail}}</li>
+          </ul>
+          <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">{{variant.color}}
+          </div>
+          <div v-for="(size, index) in sizes" :key="index">{{size}}</div>
+
           <p v-if="inventory > 10">In Stock!</p>
           <p v-else-if="inventory <= 10 && inventory > 0" style="color:darkorange">Few Remaining!</p>
           <p v-else style="color:red">Out of Stock</p>
           <p v-show="onSale"><b>ON SALE!</b></p>
-          <a :href="url">Link</a>
+          <button class="button" @click="addToCart">Add to Cart</button>
+          <button class="button" @click="removeFromCart">Remove Item</button>
+          <!-- "@" replaces "v-on:" -->
+          <p><a :href="url">A Card Link</a></p>
         </div>
       </div>
     </div>
