--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
             <h1>{{ product }}</h1>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
+            <ul>
+              <li v-for="detail in details">{{ detail }}</li>
+            </ul>
+            <div v-for="variant in variants" :key="variant.key">{{ variant.color }}</div>
+            <p>Sizes</p>
+            <ul>
+              <li v-for="size in sizes">{{ size }}</li>
+            </ul>
+            <p>Gender</p>
+            <ul>
+              <li v-for="gender in genders" :key="gender.id">{{ gender.value }}</li>
+            </ul>
           </div>
         </div>
       </div>
