--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
             </ul>
 
             <div 
+              class="color-circle"
               v-for="variant in variants" 
-              :key="variant.id" 
-              @mouseover="updateImage(variant.image)" 
-            >{{ variant.color }}</div>
-            <button class="button" @click="addToCart">Add to Cart</button>
+              :key="variant.id"
+              :style="{ backgroundColor: variant.color }"
+              @mouseover="updateImage(variant.image)"></div>
+            <button class="button" :class="{ disabledButton: !inStock }" :disabled="!inStock" @click="addToCart">Add to Cart</button>
           </div>
         </div>
       </div>
