--- a/index.html
+++ b/index.html
@@ -13,36 +13,14 @@
       <div class="nav-bar"></div>
 
       <div class="cart">Cart({{ cart }})</div>
-      
-      <div class="product-display">
-        <div class="product-container">
-          <div class="product-image">
-            <img v-bind:src="image">
-          </div>
-          <div class="product-info">
-            <h1>{{ title }}</h1>
 
-            <p v-if="inStock">In Stock</p>
-            <p v-else>Out of Stock</p>
-            <ul>
-              <li v-for="detail in details">{{ detail }}</li>
-            </ul>
-
-            <div 
-              v-for="(variant, index) in variants" 
-              :key="variant.id" 
-              @mouseover="updateVariant(index)" 
-              class="color-circle" 
-              :style="{ backgroundColor: variant.color }">
-            </div>
-            
-            <button class="button" :class="{ disabledButton: !inStock }" :disabled="!inStock" v-on:click="addToCart">Add to Cart</button>
-          </div>
-        </div>
-      </div>
+      <product-display :premium="premium" :details="['50% cotton', '30% wool', '20% polyester']"></product-display>
+      <product-display :premium="premium" :details="['20% cotton', '50% wool', '30% polyester']"></product-display>
+      <product-display :premium="premium" :details="['0% cotton', '50% wool', '50% polyester']"></product-display>
     </div>
 
     <script src="./main.js"></script>
+    <script src="./components/ProductDisplay.js"></script>
 
     <!-- Mount App -->
     <script>
