--- a/index.html
+++ b/index.html
@@ -15,18 +15,21 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <img :src="image" />
+            <img v-bind:src="image" />
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
-            <p v-if="inventory > 10">In Stock</p>
-            <p v-else-if="inventory <= 10 && inventory > 0">Low in Stock</p>
+            <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
-            <p v-if="onSale">On Sale</p>
-            <p>
-              Find similar products <a :href="url" target="_blank">here</a>.
-            </p>
-          </div>
+            <ul>
+              <li v-for="detail in details">{{detail}}</li>
+            </ul>
+            <div v-for="variant in variants" :key="variant.key">
+              {{variant.color}}
+            </div>
+            <ul>
+              <li v-for="size in sizes"> {{size}}</li>
+            </ul>
         </div>
       </div>
     </div>
