--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div id="app">
       <div class="nav-bar"></div>
 
+      <div class="cart">Cart({{ cart }})</div>
+
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
@@ -22,14 +24,20 @@
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
             <ul>
-              <li v-for="detail in details">{{detail}}</li>
+              <li v-for="detail in details">{{ detail }}</li>
             </ul>
-            <div v-for="variant in variants" :key="variant.key">
-              {{variant.color}}
+            <div
+              v-for="variant in variants"
+              @mouseover="changeColour(variant.image)"
+              :key="variant.id"
+            >
+              {{ variant.color }}
             </div>
-            <ul>
-              <li v-for="size in sizes"> {{size}}</li>
-            </ul>
+            <button class="button" @click="addToCart">Add to Cart</button>
+            <button class="button" @click="removeFromCart">
+              Remove from Cart
+            </button>
+          </div>
         </div>
       </div>
     </div>
