--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <img v-bind:src="image" />
+            <img v-bind:src="image" :class="{'out-of-stock-img': !inStock}" />
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
@@ -26,16 +26,23 @@
             <ul>
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
+
             <div
               v-for="variant in variants"
-              @mouseover="changeColour(variant.image)"
               :key="variant.id"
+              @mouseover="updateImage(variant.image)"
+              class="color-circle"
+              :style="{backgroundColor: variant.color}"
             >
-              {{ variant.color }}
+              {{ variant.color[0] }}
             </div>
-            <button class="button" @click="addToCart">Add to Cart</button>
-            <button class="button" @click="removeFromCart">
-              Remove from Cart
+            <button
+              class="button"
+              @click="addToCart"
+              :disabled="!inStock"
+              :class="{disabledButton: !inStock}"
+            >
+              Add to Cart
             </button>
           </div>
         </div>
