--- a/index.html
+++ b/index.html
@@ -11,46 +11,15 @@
   <body>
     <div id="app">
       <div class="nav-bar"></div>
-
       <div class="cart">Cart({{ cart }})</div>
-
-      <div class="product-display">
-        <div class="product-container">
-          <div class="product-image">
-            <img v-bind:src="image" />
-          </div>
-          <div class="product-info">
-            <h1>{{ title }}</h1>
-            <p v-if="inStock">In Stock</p>
-            <p v-else>Out of Stock</p>
-            <ul>
-              <li v-for="detail in details">{{ detail }}</li>
-            </ul>
-
-            <div
-              class="color-circle"
-              v-for="(variant,index) in variants"
-              :key="variant.id"
-              @mouseover="updateVariant(index)"
-              :style="{ backgroundColor: variant.color }"
-            ></div>
-
-            <p v-if="onSale">On Sale</p>
-            <button
-              class="button"
-              :class="{ disabledButton: !inStock }"
-              :disabled="!inStock"
-              v-on:click="addToCart"
-            >
-              Add to Cart
-            </button>
-          </div>
-        </div>
-      </div>
+      <product-display :premium="premium"> </product-display>
     </div>
 
     <!-- Import App -->
     <script src="./main.js"></script>
+
+    <!-- Import Components -->
+    <script src="./components/ProductDisplay.js"></script>
 
     <!-- Mount App -->
     <script>
