--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
   <body>
     <div id="app">
       <div class="nav-bar"></div>
-      <div class="cart">Cart({{ cart }})</div>
-      <product-display :premium="premium"> </product-display>
+      <div class="cart">Cart({{ cart.length }})</div>
+      <product-display
+        :premium="premium"
+        @add-to-cart="updateCart"
+        @remove-from-cart="removeItem"
+      >
+      </product-display>
     </div>
 
     <!-- Import App -->
