Lesson 4: Conditional Rendering

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <p v-if="inventory > 10">In Stock</p>
+            <p v-else-if="inventory > 0 && inventory <= 10">Almost out of stock!</p>
+            <p v-else>Out of stock</p>
+            <p v-show="onSale">SALE!</p>
           </div>
         </div>
       </div>
