--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <img v-bind:src="image" /> <!-- Dinamicamente vincula um ATRIBUTO a uma EXPRESSÃO -->
+            <img
+              v-bind:src="image"
+              :class="[inventory ? '' : 'out-of-stock-img']"
+            /> <!-- Dynamically binds the variable value to the attribute -->
           </div>
           <div class="product-info">
             <h1><a :href="url">{{ product }}</a></h1>
@@ -33,9 +36,24 @@
               v-for="variant in variants" 
               :key="variant.id" 
               @mouseover="updateImage(variant.image)" 
-            >{{ variant.color }}</div>
+              class="color-circle" 
+              :style="{ backgroundColor: variant.color }"
+            ></div>
             <div v-for="size in sizes">{{ size }}</div>
-            <button class="button" v-on:click="addToCart">Add to Cart</button>
+            <button
+              class="button"
+              :class="{ disabledButton: !inventory }"
+              :disabled="!inventory"
+              v-on:click="addToCart"
+            >
+            <!--
+              The :class attribute the object must contain
+              :class="{ className: expression }""
+              Alternatively ternary operators can be used
+              :class="[ expression ? trueClass : falseClass]""
+            -->
+              Add to Cart
+            </button>
             <button class="button" @click="removeFromCart">Remove From Cart</button>
           </div>
         </div>
