Lesson 9: Components & Props

--- a/index.html
+++ b/index.html
@@ -13,54 +13,15 @@
       <div class="nav-bar"></div>
 
       <div class="cart">Cart({{ cart }})</div>
-      
-      <div class="product-display">
-        <div class="product-container">
-          <div class="product-image">
-            <img
-              v-bind:src="image"
-              :class="[inventory ? '' : 'out-of-stock-img']"
-            /> <!-- Dynamically binds the variable value to the attribute -->
-          </div>
-          <div class="product-info">
-            <h1><a :href="url">{{ title }}</a></h1>
-            <p>{{description}}</p>
-            <p v-if="inventory > 10">In Stock</p>
-            <p v-else-if="inventory > 0 && inventory <= 10">Almost out of stock!</p>
-            <p v-else>Out of stock</p>
-            <ul>
-              <li v-for="detail in details">{{ detail }}</li>
-            </ul>
-            <div 
-              v-for="(variant, index) in variants" 
-              :key="variant.id" 
-              @mouseover="updateVariant(index)" 
-              class="color-circle" 
-              :style="{ backgroundColor: variant.color }"
-            ></div>
-            <div v-for="size in sizes">{{ size }}</div>
-            <button
-              class="button"
-              :class="{ disabledButton: !inventory }"
-              :disabled="!inventory"
-              v-on:click="addToCart"
-            >
-            <!--
-              The :class attribute the object must contain
-              :class="{ className: expression }""
-              Alternatively ternary operators can be used
-              :class="[ expression ? trueClass : falseClass]""
-            -->
-              Add to Cart
-            </button>
-            <button class="button" @click="removeFromCart">Remove From Cart</button>
-          </div>
-        </div>
-      </div>
+      <product-display :premium="premium"></product-display>
     </div>
 
     <!-- Import App -->
     <script src="./main.js"></script>
+
+    <!-- Import Component -->
+    <script src="./components/ProductDisplay.js"></script>
+
     <!-- Mount App -->
     <script>
       const mountedApp = app.mount('#app'); /*
