--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Vue Mastery</title>
-    <!-- Import Styles -->
-    <link rel="stylesheet" href="./assets/styles.css" />
-    <!-- Import Vue.js -->
-    <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
-  </head>
-  <body>
-    <div id="app">
-      <h1>Product goes here</h1>
-    </div>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Vue Mastery</title>
+		<!-- Import Styles -->
+		<link rel="stylesheet" href="./assets/styles.css" />
+		<!-- Import Vue.js -->
+		<script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
+	</head>
+	<body>
+		<div id="app">
+			<h1>{{ product }}</h1>
+			<p>{{ description }}</p>
+		</div>
 
-    <!-- Import Js -->
-    <script src="./main.js"></script>
-  </body>
+		<!-- Import App -->
+		<script src="./main.js"></script>
+
+		<!-- Mount app -->
+		<script>
+			const mountedApp = app.mount("#app");
+		</script>
+	</body>
 </html>
