--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <!-- image goes here -->
+            <img :src="image"> ### :src is a directive that binds the src attribute of the image to the data property image in the Vue instance. Its called a V-bind ### 
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
